// Version de protoobuf que estamos usando: syntax
syntax = "proto3";

// Especifica de Java
// Paquete donde generar automaticamente el codigo a partir del archivo .proto
option java_package = "com.proto.audio";

// El cliente envia el objeto de tipo "DownloadFileRequest" al servidor
message DownloadFileRequest {
    string nombreArchivo = 1;
}

// El servidor envia el objero de tipo DataChunkResponse al cliente
message DataChunkResponse {
    bytes data = 1;
}

// Nombre del servicio: "AudioService"
// La función "downloadAudio()" toma la entrada de tipo DownloadFileRequest y devuelve la salida de tipo DataChunkResponse
service AudioService {
    // Función a implementar
    rpc downloadAudio (DownloadFileRequest) returns (stream DataChunkResponse);
}